syntax = "proto3";
option go_package = "./models";
package user;

service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse) {}
  rpc GetUser (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}